Changing app name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.application.pramod.guidedmeditation"
+        applicationId "com.application.pramod.flip"
         minSdkVersion 17
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "3.0"
     }
     buildTypes {
         release {
